added skeleton and style.css

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <body>
     <p>hello world</p>
 
-    <h1 id="name"></h1>
-    <h5 id="age"></h5>
-    <h5 id="email"></h5>
+    <h1 id="name">Name</h1>
+    <h5 id="age">123</h5>
+    <h5 id="email">hello@gmail</h5>
+    <h5 id="about_me">this</h5>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
